ui/components/DlessEvents/EventId/EventId.module.scss
.wrapper {
  display: flex;
  justify-content: space-between;
  width: 100%;
  min-height: 260px;
  li {
    list-style: none;
  }
  img {
    width: 180px;
    height: 160px;
    border-radius: 5px;
  }
}

.dataEvent {
  &__number {
    font-size: 60px;
    font-weight: 700;
  }
  &__month {
    font-size: 22px;
    background: var(--gradient);
    background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent;
  }
  &__year,
  &__time {
    font-size: 15px;
    filter: contrast(20%);
  }
}

.eventInfo {
  display: flex;
  align-items: center;

  &__left {
    display: flex;
    justify-content: space-between;
    width: 400px;
    padding: 10px;
  }
  &__right {
    width: calc(100% - 420px);
    padding: 10px;
  }
  &__texts {
    margin: 0 40px;
    &:first-child {
      margin-left: 0;
    }
    li {
      padding-bottom: 10px;
    }
  }

  &__title {
    font-size: 35px;
    background: var(--gradient);
    background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent;
    font-weight: bold;
  }
  &__place {
    font-size: 20px;
    filter: contrast(20%);
  }
  &__author {
    font-size: 15px;
    filter: contrast(20%);
    margin-bottom: 20px;
  }
  &__links {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 35px;
    border-radius: 2px;
    margin-bottom: 10px;
    padding: 0 10px;
    background: var(--gradient);
    outline: none;
    box-shadow: none;
    border: none;
    border-radius: 5px;
    color: var(--whtie);
  }
}

